# Distributed-MPI-based-Password-Cracker

./: .gitignore  CMakeLists.txt  README.md  project
src/: MPIJobData.hpp  main.cpp
